Get travis working (#3)
Get travis working

--- a/tox.ini
+++ b/tox.ini
@@ -20,3 +20,8 @@ ignore =
     N806
 exclude = build/*, *.ini, *.in, MANIFEST*, *.md
 max-complexity = -1
+
+[testenv]
+deps=pytest
+commands=
+  pytest
