--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
 python:
-    - 3.6
+    - 2.6
+    - 2.7
     - 3.3
-    #    - pypy
+    - 3.6
+    - pypy
     - pypy3
-    #    - 2.7
-    #    - 2.6
 install: pip install tox-travis
 script: tox
